# oratiotranscripta

./: README.md  pyproject.toml
docs/: como-usar-oratio-transcripta.md  metadata.md
oratiotranscripta/: __init__.py  __main__.py  cli.py  provenance.py
oratiotranscripta/aggregation/: __init__.py
oratiotranscripta/alignment/: __init__.py
oratiotranscripta/annotate/: __init__.py  __main__.py  jsonl.py  manifest.py  metadata.py  parsers.py  tei.py
oratiotranscripta/asr/: __init__.py
oratiotranscripta/diarization/: __init__.py
oratiotranscripta/export/: __init__.py  jsonl.py
oratiotranscripta/ingest/: __init__.py
oratiotranscripta/vad/: __init__.py
tests/: test_annotate_cli.py  test_annotate_jsonl.py  test_annotate_manifest.py  test_annotate_parsers.py  test_annotate_tei.py  test_dataset_metadata.py  test_silero_vad.py
